Login abgeschlossen, MapView angelegt
- Login mit Passwort reset und Co abschließend eingerichtet
- MapView angelegt

--- a/RettungshundeEinsatzApp/de.lproj/Info.plist
+++ b/RettungshundeEinsatzApp/de.lproj/Info.plist
@@ -36,5 +36,7 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Wir benötigen deinen Standort, um dich auf der Karte anzuzeigen.</string>
 </dict>
 </plist>
