--- a/RettungshundeEinsatzApp/en.lproj/Info.plist
+++ b/RettungshundeEinsatzApp/en.lproj/Info.plist
@@ -37,6 +37,17 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
     <key>NSLocationWhenInUseUsageDescription</key>
-    <string>We need your location to show you on the map.</string>
+    <string>We need your location to track you during operations.</string>
+
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>We need your location even in the background to track you during operations.</string>
+
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>We always need your location to track you during operations.</string>
+
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>location</string>
+    </array>
 </dict>
 </plist>
