--- a/RettungshundeEinsatzApp/Base.lproj/Info.plist
+++ b/RettungshundeEinsatzApp/Base.lproj/Info.plist
@@ -25,6 +25,18 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We always need your location to track you during operations.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We need your location even in the background to track you during operations.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need your location to track you during operations.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+		<string>processing</string>
+		<string>fetch</string>
+	</array>
 	<key>UILaunchScreen</key>
 	<dict/>
 	<key>UIMainStoryboardFile</key>
@@ -36,18 +48,5 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>We need your location to track you during operations.</string>
-
-    <key>NSLocationAlwaysUsageDescription</key>
-    <string>We need your location even in the background to track you during operations.</string>
-
-    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-    <string>We always need your location to track you during operations.</string>
-
-    <key>UIBackgroundModes</key>
-    <array>
-        <string>location</string>
-    </array>
 </dict>
 </plist>
