Refactor Info.plist localization and enhance map details
Replaced localized Info.plist files with InfoPlist.strings for better localization of location usage descriptions. Added display name, copyright, and device capability keys to the main Info.plist. Improved user and area detail sheets in MapView for clearer UI, and added latitude/longitude formatting helpers. Cleaned up CustomMapView annotation handling.

--- a/RettungshundeEinsatzApp/Base.lproj/Info.plist
+++ b/RettungshundeEinsatzApp/Base.lproj/Info.plist
@@ -48,5 +48,13 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
+    <key>CFBundleDisplayName</key>
+    <string>Rettungshunde Einsatzapp</string>
+    <key>NSHumanReadableCopyright</key>
+    <string>© 2025 René Nettekoven</string>
+    <key>UIRequiredDeviceCapabilities</key>
+    <array>
+        <string>location-services</string>
+    </array>
 </dict>
 </plist>
